# rs-hop

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  TODO.md  deny.toml  rust-toolchain.toml  rustfmt.toml
docs/: DEVELOPMENT.md
examples/: config.toml
src/: keymap.rs  lib.rs  main.rs
src/cli/: context.rs  demo.rs  jump.rs  list.rs  mod.rs  output.rs  scan.rs
src/config/: appearance.rs  loader.rs  migrate.rs  mod.rs  writer.rs
src/domain/: backup.rs  doctor.rs  error.rs  filter.rs  mod.rs  path_repair.rs  repo.rs  sections.rs  slug.rs  sort.rs  stats.rs
src/service/: mod.rs  preview_service.rs  repo_service.rs  stats_service.rs  status_service.rs  ui_state_service.rs  zip_service.rs
src/service/repo_service/: mod.rs  section_names.rs
src/storage/: cache.rs  git_client.rs  in_memory_repository.rs  mod.rs  repository.rs  stats_cache.rs  subprocess_git_client.rs  toml_repo_repository.rs  toml_writer.rs  ui_state.rs  usage_state.rs  zip_cache.rs
src/tui/: appframe.rs  bindings.rs  colors.rs  columns.rs  detail.rs  form.rs  git_columns.rs  help.rs  list_layout.rs  mod.rs  navigation.rs  path_picker.rs  presentation.rs  preview.rs  row_cells.rs  scan_picker.rs  scroll.rs  section_picker.rs  sections_modal.rs  sections_view.rs  skin.rs  table.rs  terminal.rs  text_input.rs  widgets.rs
src/tui/app/: edit.rs  hints.rs  keys.rs  lenses.rs  mod.rs  navigate.rs  open.rs  panel.rs  progress.rs  refresh.rs  render.rs  section_manager.rs  stats.rs  tests.rs  view.rs  zip.rs
src/tui/form/: mod.rs  render.rs
src/util/: app_info.rs  archive.rs  clipboard.rs  diskusage.rs  fs.rs  logging.rs  mod.rs  opener.rs  paths.rs  scan.rs
tests/: cli_process.rs  code_stats.rs  round_trip.rs
