[package]
name = "rs-hop"
version = "0.1.0"
edition = "2024"
description = "Fuzzy-finder TUI to jump between git repositories and folders"
license = "MIT"
rust-version = "1.88"
authors = ["Corvin Gröning"]
repository = "https://github.com/cgroening/rs-hop"
homepage = "https://github.com/cgroening/rs-hop"
readme = "README.md"
keywords = ["tui", "git", "fuzzy-finder", "cli", "navigation"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["images/", "CLAUDE.md", "TODO.md"]

[lib]
name = "hop"
path = "src/lib.rs"

[[bin]]
name = "hop"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
# In-house TUI toolkit (terminal guard, theming/Skin, modals, forms, pickers,
# help, shortcut hints, panel chrome). Fuzzy matching also comes from here.
# Path dependency to the local workspace copy.
ratada = { path = "../../libs/ratada", version = "0.2" }
# In-house CLI toolkit (styled tables/alerts/key-value output, fuzzy prompts).
sparcli = { path = "../../libs/sparcli", version = "0.2", features = ["fuzzy"] }
# Fuzzy matching for the pure domain filter (domain must not depend on the
# ratada TUI toolkit, so the algorithm crate stays a direct dependency). The
# TUI's match highlighting comes from `ratada::fuzzy`.
# https://crates.io/crates/nucleo-matcher
nucleo-matcher = "0.3"
# CLI parsing (subcommands + the `hop <slug>` fast jump).
# https://crates.io/crates/clap
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
# Comment-preserving rewrites of the user's config.toml.
# https://crates.io/crates/toml_edit
toml_edit = "0.22"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
] }
thiserror = "2"
anyhow = "1"
log = { version = "0.4", features = ["std"] }
# Display-width measurement for aligning table columns (wide glyphs = 2).
unicode-width = "0.2"
# ZIP archive writing for the repo backup (`z`/`Z`); deflate only.
# https://crates.io/crates/zip
zip = { version = "2", default-features = false, features = ["deflate"] }
# CRC32 of source files, to skip rewriting a backup whose content is unchanged
# (matches the CRC32 the zip stores). Already in the tree via zip/flate2.
# https://crates.io/crates/crc32fast
crc32fast = "1"

[profile.release]
opt-level = 3
